Adding Houston admin and removing nearly all client side code for now

--- a/client/admin.jade
+++ b/client/admin.jade
@@ -3,9 +3,8 @@
 head
     title Ketch Admin
 
-
 body
 
 
-template(name="users")
-    span My Users Woot
+template(name="home")
+    h1 Ketch the One
