Removing houston from packages. Too heavy weight and not customizable. Limit css effect to only home template

--- a/client/index.jade
+++ b/client/index.jade
@@ -6,7 +6,11 @@ head
 body
 
 template(name="home")
-    div.logo
-        img(src="images/xketchLogo.png")
-    img.ketchIcon(src="images/ketchIcon.png")
-    div.sea
+    div#home
+        div.logo
+            img(src="images/xketchLogo.png")
+        img.ketchIcon(src="images/ketchIcon.png")
+        div.sea
+
+template(name="userlist")
+    span List of Users
