Adding less and make avatar round

--- a/client/index.jade
+++ b/client/index.jade
@@ -16,4 +16,4 @@ template(name="userlist")
   ul
     each users
       li {{ firstName }}
-        img(src=profilePhotoUrl)
+        img.avatar(src=profilePhotoUrl)
