--- a/client/index.jade
+++ b/client/index.jade
@@ -6,14 +6,18 @@ head
 body
 
 template(name="home")
-  div#home
-    div.logo
-      img(src="images/xketchLogo.png")
-    img.ketchIcon(src="images/ketchIcon.png")
-    div.sea
+  #home
+    .headerWrapper
+      .logo
+        img(src="images/xketchLogo.png")
+
+    .sea
+      .ketchWrapper
+        img.ketchIcon(src="images/ketchIcon.png")
 
 template(name="userlist")
   ul
     each users
-      li {{ firstName }}
+      li
         img.avatar(src=profilePhotoUrl)
+        span {{ firstName }}
