Namespace userlist styles

--- a/client/index.jade
+++ b/client/index.jade
@@ -6,8 +6,9 @@ head
 body
 
 template(name="userlist")
-  ul
-    each users
-      li
-        img.avatar(src=profilePhotoUrl)
-        span {{ firstName }}
+  .userlist
+    ul
+      each users
+        li
+          img.avatar(src=profilePhotoUrl)
+          span {{ firstName }}
