--- a/client/index.less
+++ b/client/index.less
@@ -1,16 +1,19 @@
-li {
-  list-style: none;
-  text-align: center;
-  margin: 15px;
-  width: 100px;
-  display: inline;
-  float: left
-}
+// User List
+.userlist {
+  li {
+    list-style: none;
+    text-align: center;
+    margin: 15px;
+    width: 100px;
+    display: inline;
+    float: left
+  }
 
-img.avatar {
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-  display: block;
-  margin-bottom: 5px;
+  img.avatar {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    display: block;
+    margin-bottom: 5px;
+  }
 }
