--- a/client/index.less
+++ b/client/index.less
@@ -1,5 +1,9 @@
-// User List
-.userlist {
+
+.user-list {
+  a {
+    color: #000000;
+    text-decoration: none;
+  }
   li {
     list-style: none;
     text-align: center;
@@ -16,4 +20,8 @@
     display: block;
     margin-bottom: 5px;
   }
+}
+
+.user-details {
+  margin: 10px;
 }
