--- a/client/index.less
+++ b/client/index.less
@@ -1,7 +1,13 @@
 // Global Stuff
-li {
-  list-style: none;
+section {
+  margin: 20px;
 }
+ul {
+  li {
+    list-style: none;
+  }
+}
+
 a {
   color: #000000;
   text-decoration: none;
@@ -46,5 +52,12 @@ a {
       width: 320px;
       height: 320px;
     }
+  }
+}
+
+.user-candidates {
+  img {
+    width: 100px;
+    height: 100px;
   }
 }
