--- a/client/index.less
+++ b/client/index.less
@@ -56,8 +56,13 @@ a {
 }
 
 .user-candidates {
+  margin: 10px;
   img {
     width: 100px;
     height: 100px;
   }
+}
+
+.user-connections {
+  margin: 10px;
 }
