--- a/client/index.jade
+++ b/client/index.jade
@@ -87,5 +87,5 @@ template(name='userConnections')
           li
             a(href='/users/{{ otherUser._id }}')
               img.avatar(src=otherUser.profilePhotoUrl)
-            span {{ otherUser.firstName }}
+            span {{ otherUser.firstName }} [{{ readableType }}]
             button.remove-connection Remove Connection
