Add ability to clear photos and reload them from facebook in the admin ui

--- a/client/index.jade
+++ b/client/index.jade
@@ -40,6 +40,12 @@ template(name='userDetails')
         li Updated At: {{ updatedAt }}
         li About:
           p {{ about }}
+
+    section.fb-info
+      h2 Facebook Info
+      button.clear-photos Clear Photos
+      button.reload-fb-photos Reload Facebook Photos
+
     section.photos
       h2 Photos
       ul
