--- a/client/index.less
+++ b/client/index.less
@@ -42,6 +42,15 @@ a {
       font-size: 15px;
     }
   }
+  .fb-info {
+    li {
+      margin-bottom: 5px;
+    }
+    a {
+      text-decoration: underline;
+      color: blue;
+    }
+  }
   .photos {
     li {
       display: inline;
