Add ability to update facebook access token from user details. Make sure azure photo upload has right extension and content type https://app.asana.com/0/27333528260675/27512951409924

--- a/client/index.jade
+++ b/client/index.jade
@@ -48,13 +48,13 @@ template(name='userDetails')
           li Id:
             a(href="https://facebook.com/#{ id }", target='_blank') #{ id } [Go to Profile]
           li Access Token:
-            input(value=accessToken)
+            input#fb-access-token(value=accessToken)
           li Email: #{ email }
           li Name: #{ name }
           li Gender: #{ gender }
           li TODO: Many other infos to come, location, work, etc.
 
-
+      button.update-fb-access-token Update Access Token
       button.clear-photos Clear Photos
       button.reload-fb-photos Reload Facebook Photos
 
