--- a/client/index.less
+++ b/client/index.less
@@ -84,3 +84,11 @@ a {
     display: inline-block;
   }
 }
+
+.user-connection-details {
+  margin: 10px;
+  img.avatar {
+    width: 80px;
+    height: 80px;
+  }
+}
