Add ability to send message into a connection

--- a/client/index.jade
+++ b/client/index.jade
@@ -137,5 +137,8 @@ template(name='userConnectionDetails')
 
     h2 Messages
 
+    textarea#new-message
+    button.send-message Send Message
+
 
 
