Display current list of messages and allow sending new message for connection

--- a/client/index.jade
+++ b/client/index.jade
@@ -136,7 +136,9 @@ template(name='userConnectionDetails')
       li Type: {{ readableType connection }}
 
     h2 Messages
-
+    ol
+      +each connection.messages
+        li #{ sender.firstName }: #{ text }
     textarea#new-message
     button.send-message Send Message
 
