Display both my choice as well as their choice. Matching choice automatically create connection. Remove button / endpoint to explicitly create connection
https://app.asana.com/0/27526224232793/27390717124341

--- a/client/index.jade
+++ b/client/index.jade
@@ -83,12 +83,18 @@ template(name='userCandidates')
             a(href='/users/#{ user._id }')
               img.avatar(src=user.profilePhotoUrl)
             span #{ user.firstName }
-            span Their Choice:
-              b #{ findInverse.choice }
-            button.say-yes Say YES!
-            button.say-maybe Say Maybe...
-            button.say-no Say no :(
-            button.make-connection Make Connection
+            .my-choice
+              span My Choice:
+                b #{ choice }
+              button.say-yes Say YES!
+              button.say-maybe Say Maybe...
+              button.say-no Say no :(
+            .their-choice
+              span Their Choice:
+                b #{ findInverse.choice }
+              button.say-yes Say YES!
+              button.say-maybe Say Maybe...
+              button.say-no Say no :(
 
 template(name='userConnections')
   .user-connections
