Add ability to clear all connections

--- a/client/index.jade
+++ b/client/index.jade
@@ -103,7 +103,7 @@ template(name='userConnections')
 
     section.actions
       h2 Actions
-      button.clear-connections Clear Connections
+      button.clear-all-connections Clear All Connections
 
     // TODO: Refactor this to be share code with maybe-connections
     section.connection-list.yes-connections
