--- a/client/index.jade
+++ b/client/index.jade
@@ -98,6 +98,7 @@ template(name='userCandidateList')
         span #{ user.firstName }
         span Updated At #{ updatedAt }
         button.remove-candidate Remove
+        button.create-inverse Add me to their queue
         .my-choice
           span My Choice:
             b #{ choice }
