Adding small avatar to indicate who the current user is

--- a/client/index.less
+++ b/client/index.less
@@ -13,6 +13,13 @@ a {
   text-decoration: none;
 }
 
+.user-nav {
+  img.small-avatar {
+    width: 80px;
+    height: 80px;
+  }
+}
+
 .user-list {
 
   li {
