--- a/client/index.jade
+++ b/client/index.jade
@@ -16,6 +16,7 @@ template(name='userList')
 
 template(name='userNav')
   section.user-nav
+    img.small-avatar(src=profilePhotoUrl)
     button
       a(href='/users') Back to user list
     button
