Spliting client admin into components user_list, user_profile, user_connections and user_candidates

--- a/client/index.less
+++ b/client/index.less
@@ -13,6 +13,7 @@ a {
   text-decoration: none;
 }
 
+// Navigation
 .user-nav {
   img.small-avatar {
     width: 80px;
@@ -20,82 +21,3 @@ a {
   }
 }
 
-.user-list {
-
-  li {
-    text-align: center;
-    margin: 15px;
-    width: 100px;
-    display: inline;
-    float: left
-  }
-
-  img.avatar {
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    display: block;
-    margin-bottom: 5px;
-  }
-}
-
-.user-details {
-  margin: 10px;
-  .info {
-    li {
-      margin-bottom: 5px;
-    }
-    p {
-      font-size: 15px;
-    }
-  }
-  .fb-info {
-    li {
-      margin-bottom: 5px;
-    }
-    a {
-      text-decoration: underline;
-      color: blue;
-    }
-  }
-  .photos {
-    li {
-      display: inline;
-      float: left;
-      margin: 5px;
-    }
-    img {
-      width: 320px;
-      height: 320px;
-    }
-  }
-}
-
-.user-candidates {
-  margin: 10px;
-  img {
-    width: 100px;
-    height: 100px;
-  }
-}
-
-.user-connections {
-  margin: 10px;
-  img {
-    width: 100px;
-    height: 100px;
-  }
-
-  .connection-list {
-    width: 45%;
-    display: inline-block;
-  }
-}
-
-.user-connection-details {
-  margin: 10px;
-  img.avatar {
-    width: 80px;
-    height: 80px;
-  }
-}
