Displaying currentDate across all pages for debugging purposes. Adding vars.coffee to models

--- a/client/index.jade
+++ b/client/index.jade
@@ -6,6 +6,7 @@ head
 body
 
 template(name='userNav')
+  span Current Date: #{ CurrentDate }
   section.user-nav
     img.small-avatar(src=profilePhotoUrl)
     button
