hasSeenConnection boolean is actually not necessary for notifying user on the client

--- a/client/user_connections/user_connections.jade
+++ b/client/user_connections/user_connections.jade
@@ -67,8 +67,9 @@ template(name='userConnectionDetails')
         li
           b {{ firstName _id }} Info
         li Last Sent Message Date: #{ lastSentDate }
-        li Has Seen Connection: #{ hasSeenConnection }
         li Has Unread Message: #{ hasUnreadMessage }
+      .actions
+        button.mark-as-read Mark As Read for {{ firstName _id }}
 
     h2 Messages
     ol
