Add ability to mark connection as read in both public api and admin ui

--- a/client/user_connections/user_connections.jade
+++ b/client/user_connections/user_connections.jade
@@ -41,7 +41,7 @@ template(name='userConnections')
 
 
 template(name='userConnectionDetails')
-  .user-connection-details
+  .user-connection-details(data-connection-id=connection._id)
     h1 #{ thisUser.firstName } Connection Details [{{ readableType connection }}]
     +userNav thisUser
     h2
